syntax = "proto3";
package proto;

option go_package = "./proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// WarlockTalents message.
message WarlockTalents {
    bool dark_regeneration = 1;
    bool soul_leech = 2;
    bool harvest_life = 3;
    bool demonic_breath = 4;
    bool mortal_coil = 5;
    bool shadowfury = 6;
    bool soul_link = 7;
    bool sacrificial_pact = 8;
    bool dark_bargain = 9;
    bool blood_horror = 10;
    bool burning_rush = 11;
    bool unbound_will = 12;
    bool grimoire_of_supremacy = 13;
    bool grimoire_of_service = 14;
    bool grimoire_of_sacrifice = 15;
    bool archimondes_darkness = 16;
    bool kiljaedens_cunning = 17;
    bool mannoroths_fury = 18;
}

enum WarlockMajorGlyph {
    WarlockMajorGlyphNone = 0;
    GlyphOfConflagrate = 42454;
    GlyphOfSiphonLife = 42455;
    GlyphOfFear = 42458;
    GlyphOfDemonTraining = 42460;
    GlyphOfHealthstone = 42462;
    GlyphOfCurseOfTheElements = 42464;
    GlyphOfImpSwarm = 42465;
    GlyphOfHavoc = 42466;
    GlyphOfSoulstone = 42470;
    GlyphOfUnstableAffliction = 42472;
    GlyphOfSoulConsumption = 43390;
    GlyphOfCurseOfExhaustion = 43392;
    GlyphOfDrainLife = 45779;
    GlyphOfDemonHunting = 45780;
    GlyphOfEmberTap = 45781;
    GlyphOfDemonicCircle = 45782;
    GlyphOfUnendingResolve = 45783;
    GlyphOfLifeTap = 45785;
    GlyphOfEternalResolve = 50077;
    GlyphOfSupernova = 93197;
}

enum WarlockMinorGlyph {
    WarlockMinorGlyphNone = 0;
    GlyphOfHandOfGuldan = 42453;
    GlyphOfVerdantSpheres = 42456;
    GlyphOfNightmares = 42457;
    GlyphOfFelguard = 42459;
    GlyphOfHealthFunnel = 42461;
    GlyphOfSubtlety = 42463;
    GlyphOfShadowBolt = 42467;
    GlyphOfCarrionSwarm = 42471;
    GlyphOfFallingMeteor = 42473;
    GlyphOfUnendingBreath = 43389;
    GlyphOfEyeOfKilrogg = 43391;
    GlyphOfSubjugateDemon = 43393;
    GlyphOfSoulwell = 43394;
    GlyphOfCrimsonBanish = 45789;
    GlyphOfGatewayAttunement = 93202;
}

// END GENERATED

message WarlockOptions {
	enum Summon {
		NoSummon = 0;
		Imp = 1;
		Voidwalker = 2;
		Succubus = 3;
		Felhunter = 4;
		Felguard = 5;
	}

	Summon summon = 1;
	bool detonate_seed = 2;
	bool use_item_swap_bonus_stats = 3;
}

message AfflictionWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
	}
	Options options = 1;
}

message DemonologyWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
	}
	Options options = 1;
}

message DestructionWarlock {
	message Rotation {
	}

	message Options {
		WarlockOptions class_options = 1;
	}
	Options options = 1;
}
